[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AtomTimeTracker"
version = "2024.0"
description = "Track grains,clusters, etc. over time"
keywords = ["ovito", "ovito-extension"]
authors = [{name = "Daniel Utt", email = "utt@ovito.org"}]
maintainers = [{name = "Daniel Utt", email = "utt@ovito.org"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ovito >= 3.11.0",
    "networkx >= 3.0"
]

[project.urls]
repository = "https://github.com/ovito-org/AtomTimeTracker"

[project.entry-points.'OVITO.Modifier']
"Atom Time Tracker" = "AtomTimeTracker:AtomTimeTracker"

[project.entry-points.'OVITO.ViewportOverlay']
"Atom Time Tracker" = "AtomTimeTrackerOverlay:AtomTimeTracker"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:module 'sre_parse' is deprecated:DeprecationWarning",
    "ignore:module 'sre_constants' is deprecated:DeprecationWarning",
]